force-app/main/default/objects/HFS_Experience__c/HFS_Experience__c.object-meta.xml
<CustomObject>
    <label>SCS Experience</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>SCS Experience Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCS Experiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>