force-app/main/default/objects/HFS_Experience__c/fields/Anonymous_Experience_Reference__c.field-meta.xml
<CustomField>
    <fullName>Anonymous_Experience_Reference__c</fullName>
    <description>If the experience is not linked to a guest, then allow users to enter a value here</description>
    <inlineHelpText>Only applicable for Anonymous experiences, e.g VVIP lounge guests</inlineHelpText>
    <label>Anonymous Experience Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>