force-app/main/default/objects/HFS_Experience__c/fields/Bags_in_Storage__c.field-meta.xml
<CustomField>
    <fullName>Bags_in_Storage__c</fullName>
    <label>Bags in Storage</label>
    <summarizedField>HFS_Item__c.Number_of_Bags__c</summarizedField>
    <summaryFilterItems>
        <field>HFS_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>In Storage</value>
    </summaryFilterItems>
    <summaryForeignKey>HFS_Item__c.HFS_Experience__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>