force-app/main/default/objects/HFS_Experience__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the SCS is linked to a campaign, select it here</description>
    <label>Campaign</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Campaign.Village__c</field>
            <operation>equals</operation>
            <valueField>$Source.Village__c</valueField>
        </filterItems>
        <filterItems>
            <field>Campaign.Includes_SCS_Experience__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>SCS enabled campaign</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>SCS Experiences</relationshipLabel>
    <relationshipName>SCS_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>