force-app/main/default/objects/HFS_Experience__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Old Style Customer</inlineHelpText>
    <label>Guest</label>
    <referenceTo>b2c_customer__c</referenceTo>
    <relationshipLabel>SCS Experiences</relationshipLabel>
    <relationshipName>HFS_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>