force-app/main/default/objects/HFS_Experience__c/fields/Customer_Collect_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Customer_Collect_Date_Time__c</fullName>
    <label>Guest Collect Date/Time</label>
    <type>DateTime</type>
</CustomField>