force-app/main/default/objects/HFS_Experience__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>temp - until we hook up with the customer</description>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>