force-app/main/default/objects/HFS_Experience__c/fields/Experience_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Experience_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Experience Date/Time</label>
    <type>DateTime</type>
</CustomField>