force-app/main/default/objects/HFS_Experience__c/fields/First_Purchase_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Purchase_Date_Time__c</fullName>
    <label>First Purchase Date/Time</label>
    <summarizedField>HFS_Item__c.Request_Date_Time__c</summarizedField>
    <summaryForeignKey>HFS_Item__c.HFS_Experience__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>