force-app/main/default/objects/HFS_Experience__c/fields/Guest_API__c.field-meta.xml
<CustomField>
    <fullName>Guest_API__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>API Guest</inlineHelpText>
    <label>Guest</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Account must be of type Guest</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Guest</value>
        </filterItems>
        <infoMessage>Please select a Guest</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SCS Experiences</relationshipLabel>
    <relationshipName>SCS_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>