force-app/main/default/objects/HFS_Experience__c/fields/Hours_in_Village__c.field-meta.xml
<CustomField>
    <fullName>Hours_in_Village__c</fullName>
    <formula>(Customer_Collect_Date_Time__c - Experience_Date_Time__c) *24</formula>
    <label>Hours in Village</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>