force-app/main/default/objects/HFS_Experience__c/fields/Items_in_Storage__c.field-meta.xml
<CustomField>
    <fullName>Items_in_Storage__c</fullName>
    <label>Items in Storage</label>
    <summaryFilterItems>
        <field>HFS_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>In Storage</value>
    </summaryFilterItems>
    <summaryForeignKey>HFS_Item__c.HFS_Experience__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>