force-app/main/default/objects/HFS_Experience__c/fields/My_Village_Experience__c.field-meta.xml
<CustomField>
    <fullName>My_Village_Experience__c</fullName>
    <formula>if (TEXT($User.Village__c ) = Village__r.Name , true, false)</formula>
    <label>My Village Experience</label>
    <type>Checkbox</type>
</CustomField>