force-app/main/default/objects/HFS_Experience__c/fields/Order_Ref__c.field-meta.xml
<CustomField>
    <fullName>Order_Ref__c</fullName>
    <description>Order Reference from the POS System</description>
    <label>Order Ref</label>
    <length>100</length>
    <type>Text</type>
</CustomField>