force-app/main/default/objects/HFS_Experience__c/fields/Personal_Shopper__c.field-meta.xml
<CustomField>
    <fullName>Personal_Shopper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Shopper</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The User must be set as a Personal Shopper</errorMessage>
        <filterItems>
            <field>User.Personal_Shopper__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Please select a Personal Shopper</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>SCS_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>