force-app/main/default/objects/HFS_Experience__c/fields/Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Location__c</fullName>
    <label>Pickup Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Main Welcome Centre</fullName>
                <default>true</default>
                <label>Main Welcome Centre</label>
            </value>
            <value>
                <fullName>VIP Lounge</fullName>
            </value>
            <value>
                <fullName>Valet Parking</fullName>
            </value>
            <value>
                <fullName>BV Train Station</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>