force-app/main/default/objects/HFS_Experience__c/fields/Planned_Experience_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Experience_Date__c</fullName>
    <inlineHelpText>The Date the Guest is expected to activate their SCS experience</inlineHelpText>
    <label>Planned Experience Date</label>
    <type>Date</type>
</CustomField>