force-app/main/default/objects/HFS_Experience__c/fields/Requested_Items__c.field-meta.xml
<CustomField>
    <fullName>Requested_Items__c</fullName>
    <label>Outstanding Requested Items</label>
    <summaryFilterItems>
        <field>HFS_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Requested, Runner On Way, With Runner</value>
    </summaryFilterItems>
    <summaryForeignKey>HFS_Item__c.HFS_Experience__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>