force-app/main/default/objects/HFS_Experience__c/fields/Shelf__c.field-meta.xml
<CustomField>
    <fullName>Shelf__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shelf</label>
    <referenceTo>Shelf__c</referenceTo>
    <relationshipName>HFS_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>