force-app/main/default/objects/HFS_Experience__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
                <default>true</default>
                <label>Live</label>
            </value>
            <value>
                <fullName>Customer Requested</fullName>
            </value>
            <value>
                <fullName>Customer Collected</fullName>
            </value>
            <value>
                <fullName>Pre Booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>