force-app/main/default/objects/HFS_Experience__c/fields/Total_Items_on_Experience__c.field-meta.xml
<CustomField>
    <fullName>Total_Items_on_Experience__c</fullName>
    <label>Total Items on Experience</label>
    <summaryForeignKey>HFS_Item__c.HFS_Experience__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>