force-app/main/default/objects/HFS_Experience__c/fields/Total_Items_Requested__c.field-meta.xml
<CustomField>
    <fullName>Total_Items_Requested__c</fullName>
    <formula>Requested_Items__c + Items_in_Storage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Requested Items + Bags in Storage</inlineHelpText>
    <label>Total Items Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>