force-app/main/default/objects/HFS_Experience__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Village</label>
    <referenceTo>Village__c</referenceTo>
    <relationshipName>HFS_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>