force-app/main/default/objects/HFS_Experience__c/fields/Village_Name__c.field-meta.xml
<CustomField>
    <fullName>Village_Name__c</fullName>
    <formula>Village__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Village Name</label>
    <type>Text</type>
</CustomField>