force-app/main/default/objects/HFS_Experience__c/validationRules/Bicester_pickup_location.validationRule-meta.xml
<ValidationRule>
    <fullName>Bicester_pickup_location</fullName>
    <active>false</active>
    <description>Only Bicester can select a different location other than the main welcome center</description>
    <errorConditionFormula>Village__r.Name &lt;&gt; &quot;Bicester&quot;
&amp;&amp;   

 NOT(ISPICKVAL(Pickup_Location__c , &quot;Main Welcome Centre&quot;))</errorConditionFormula>
    <errorDisplayField>Pickup_Location__c</errorDisplayField>
    <errorMessage>Please select Main Welcome Center</errorMessage>
</ValidationRule>