force-app/main/default/objects/HFS_Experience__c/validationRules/Only_Bicester_can_have_other_locations.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Bicester_can_have_other_locations</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 Village_Name__c  &lt;&gt; &quot;Bicester&quot;
, NOT( ISPICKVAL(Pickup_Location__c , &quot;Main Welcome Centre&quot;))

)</errorConditionFormula>
    <errorDisplayField>Pickup_Location__c</errorDisplayField>
    <errorMessage>Only Bicester Village can select a different pickup location</errorMessage>
</ValidationRule>